--- a/javascriptians/index.html
+++ b/javascriptians/index.html
@@ -1,19 +1,26 @@
 <head>
   <script defer src="javascriptians.js"></script>
   <style>
-    .rank:nth-of-type(1) {
+    body{
+      font:10px Arial;
+      --memberFontSize: 1.5em;
+    }
+    H2:nth-of-type(1) {
       background: burlywood;
     }
-    .rank:nth-of-type(2) {
+    H2:nth-of-type(2) {
       background: silver;
     }
-    .rank:nth-of-type(3) {
+    H2:nth-of-type(3) {
       background: gold;
     }
-    div {
-      padding-left: 1em;
-      font-size: 2em;
+    DIV {
+      padding-left: var(--memberFontSize);
+      font-size: var(--memberFontSize);
     }
   </style>
 </head>
-<body></body>
+<body>
+  <h3><a href="https://github.com/oranjes/oranjes.github.io/tree/master/javascriptians">broncode op Github</a> of gebruik F12 Inspector</h3>
+  <div></div>
+</body>
