--- a/javascriptians/index.html
+++ b/javascriptians/index.html
@@ -21,6 +21,6 @@
   </style>
 </head>
 <body>
-  <h3><a href="https://github.com/oranjes/oranjes.github.io/tree/master/javascriptians">broncode op Github</a> of gebruik F12 Inspector</h3>
+  <h3><a href="https://github.com/oranjes/oranjes.github.io/blob/master/datatypes.md">Leesdocument Datatypes</a> - <a href="https://github.com/oranjes/oranjes.github.io/tree/master/javascriptians">broncode op Github</a> of gebruik F12 Inspector</h3>
   <div></div>
 </body>
