--- a/javascriptians/index.html
+++ b/javascriptians/index.html
@@ -1,8 +1,8 @@
 <head>
   <script defer src="javascriptians.js"></script>
   <style>
-    body{
-      font:10px Arial;
+    body {
+      font: 10px Arial;
       --memberFontSize: 1.5em;
     }
     H2:nth-of-type(1) {
@@ -21,6 +21,10 @@
   </style>
 </head>
 <body>
-  <h3><a href="https://github.com/oranjes/oranjes.github.io/blob/master/datatypes.md">Leesdocument Datatypes</a> - <a href="https://github.com/oranjes/oranjes.github.io/tree/master/javascriptians">broncode op Github</a> of gebruik F12 Inspector</h3>
+  <h3>
+    <a href="https://github.com/oranjes/oranjes.github.io/blob/master/datatypes.md">Leesdocument Datatypes</a> -
+    <a href="https://github.com/oranjes/oranjes.github.io/tree/master/javascriptians">broncode op Github</a> of gebruik
+    F12 Inspector
+  </h3>
   <div></div>
 </body>
